--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react-scroll": "^1.8.2"
   }
 }
